feat(eam): 验收入库状态机重构 + 异常批次隔离 + 换货闭环 (PR-1/2/3)
- 三 Tab 视图: 待验收订单(操作导向)/入库批次+异常批次(审计导向), 派生 batchStatus 状态机
- 待验收字段拆分: 总件数/已验收/待验收/换货/退货 独立列; 退货终态扣减待验收, 换货在途不扣
- 验收表单: 历史退货/换货行级标记(背景+Tag+禁用), 已验收行无操作按钮
- PR-2: biz_eam_inbound_batch.generated_asset_count 反规范化+回填; purchase_order_item 增加 returned_qty/exchanged_qty 明细级终态跟踪
- PR-3: inbound_batch_item 换货四字段 + 登记二次发货接口 + 详情页登记弹窗
- 修复: 批次详情 SQL filesort 触发 MySQL 1038; InputNumber 初值超限; 展开行空值崩溃; OrderList 入库状态列接入列配置
- VersionHistory 109 迁移幂等化, 启动零 ERROR
- 验证: FE typecheck/lint/test 45/45 通过; BE compile/test 通过; 浏览器 E2E+回归+最终验收全绿